--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8" />
     <title>Recipe Home</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"
-        th:href="@{/webjars/bootstrap/4.6.0/css/bootstrap.min.css}">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"
+          th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}">
 
-    <script src="/webjars/jquery/3.6.0/jquery.min.js"></script>
+    <script src="/webjars/jquery/1.11.1/jquery.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous" th:src="@{/webjars/bootstrap/4.6.0/js/bootstrap.bundle.min.js}"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 
 
 </head>
@@ -30,16 +32,29 @@
                     </div>
                     <div class="panel-body">
                         <div class="table-responsive" th:if="${not #lists.isEmpty(recipes)}">
-                            <table class="table table-hover">
+                            <table class="table table-hover ">
                                 <thead class="thead-inverse">
                                     <tr>
                                         <th>ID</th>
                                         <th>Description</th>
+                                        <th>View</th>
                                     </tr>
                                 </thead>
+                                <tr th:remove="all">
+                                    <td>123</td>
+                                    <td>Tasty Goodnees 1</td>
+                                    <td><a href="#">View</a></td>
+                                </tr>
+                                <tr th:remove="all">
+                                    <td>12333</td>
+                                    <td>Tasty Goodnees 2</td>
+                                    <td><a href="#">View</a></td>
+                                </tr>
                                 <tr th:each="recipe : ${recipes}">
-                                    <td th:text="${recipe.id}">123</td>
-                                    <td th:text="${recipe.description}">Tasty Goodnees</td>
+                                    <!--/*@thymesVar id="recipe" type="guru.springframework.domain.Recipe"*/-->
+                                    <td th:text="${recipe.id}">334</td>
+                                    <td th:text="${recipe.description}">Tasty Goodnees 3</td>
+                                    <td><a href="#" th:href="@{'/recipe/show/' + ${recipe.id}}">View</a></td>
                                 </tr>
                             </table>
                         </div>
